Fix input alignment

--- a/src/Components/LandingPage/WaitlistForm.css
+++ b/src/Components/LandingPage/WaitlistForm.css
@@ -9,19 +9,14 @@
 }
 
 .waitlist-subscribe-form input {
-    /* display: block;
-    margin: 5px auto; */
     width: 100%;
     max-width: 500px;
-    /* height:6%; */
-    /* position: relative;
-    top:50%; */
     border-radius: 5px;
     border:none;
-    padding: 20px 10px 10px;
+    padding: 20px;
     color: rgb(12, 12, 212);
     font-size: 16px;
-    text-align: center;
+    text-align: left;
 }
 
 .waitlist-subscribe-form input:focus{
